cluster/apps/default/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      hostNetwork: true
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:2022.6.2 # {"$imagepolicy": "flux-system:homeassistant"}
        ports:
        - containerPort: 8123
        securityContext:
          privileged: true
        readinessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: homeassistant-config
