cluster/apps/default/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ExternalName
  externalName: homeassistant.${SECRET_PRIVATE_DOMAIN}.
