cluster/apps/default/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
spec:
  rules:
    - host: homeassistant.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
  tls:
    - hosts:
        - homeassistant.${SECRET_PUBLIC_DOMAIN}
